test/negative/t29.mli.expected

*******************************
********** Parsed file ********
*******************************
exception E of float list 
val f : 'a -> 'a[@@gospel
                  {| x = f y
    raises E l -> match l with
                  | [] -> false
                  | y :: ys -> y = 2 |}]

*******************************
****** GOSPEL translation *****
*******************************
(*@ open Gospelstdlib *)

exception E of float list 

val f : 'a -> 'a
(*@ x = f y
    with ...
     *)
File "t29.mli", line 21, characters 31-32:
Error: Type mysmatch. Cannot match float with integer
